Changed title of activity.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,7 +7,7 @@
         <item>Wszystkie książki</item>
         <item>Losuj książkę</item>
         <item>FAQ</item>
-        <item>Ranking i statystyki</item>
+        <item>Statystyki</item>
         <item>Ustawienia profilu</item>
     </string-array>
 
