--- a/app/src/main/res/layout/dialog_card_book.xml
+++ b/app/src/main/res/layout/dialog_card_book.xml
@@ -132,8 +132,8 @@
         android:layout_marginEnd="@dimen/def_margin"
         android:layout_marginStart="@dimen/def_margin"
         android:layout_marginTop="@dimen/def_margin"
-        android:textColor="@android:color/white"
+        android:text="@string/dialog_card_book_button_dismiss"
         android:textAllCaps="true"
-        android:text="@string/dialog_card_book_button_dismiss"/>
+        android:textColor="@android:color/white"/>
 
 </LinearLayout>
