--- a/app/src/main/res/layout-land/error_layout.xml
+++ b/app/src/main/res/layout-land/error_layout.xml
@@ -4,14 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_marginBottom="24dp"
     android:gravity="bottom|center_horizontal"
-    android:layout_marginBottom="24dp">
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="40dp"
-        app:srcCompat="@drawable/error"
-        android:layout_height="40dp"/>
+        android:layout_height="40dp"
+        app:srcCompat="@drawable/error"/>
 
     <TextView
         android:layout_width="match_parent"
