--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -34,15 +35,15 @@
                     android:fitsSystemWindows="true"
                     android:scaleType="fitXY"
                     android:transitionName="@string/transition_book_cover"
-                    app:layout_collapseMode="parallax" />
+                    app:layout_collapseMode="parallax"/>
 
                 <View
                     android:id="@+id/gradient"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/gradient_cover_height"
                     android:layout_gravity="bottom"
-                    android:transitionName="@string/transition_gradient"
-                    android:background="@drawable/gradient_shape" />
+                    android:background="@drawable/gradient_shape"
+                    android:transitionName="@string/transition_gradient"/>
 
             </FrameLayout>
 
@@ -52,14 +53,14 @@
                 android:layout_height="?attr/actionBarSize"
                 app:contentInsetStart="@dimen/toolbar_title_padding"
                 app:contentInsetStartWithNavigation="@dimen/layout_padding"
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="pin"/>
 
             <com.miguelcatalan.materialsearchview.MaterialSearchView
                 android:id="@+id/search_view"
                 style="@style/MaterialSearchViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="pin"/>
 
         </net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout>
 
@@ -70,15 +71,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         android:background="@color/cardViewBackground"
         android:clipToPadding="false"
+        android:fitsSystemWindows="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
@@ -88,14 +89,14 @@
             android:paddingTop="10dp">
 
             <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/cv_overview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/single_book_card_bottom_margin"
-                android:layout_marginLeft="@dimen/def_margin"
-                android:layout_marginRight="@dimen/def_margin"
-                android:layout_marginTop="@dimen/def_margin"
-                android:elevation="8dp">
+                                                android:id="@+id/cv_overview"
+                                                android:layout_width="match_parent"
+                                                android:layout_height="wrap_content"
+                                                android:layout_marginBottom="@dimen/single_book_card_bottom_margin"
+                                                android:layout_marginLeft="@dimen/def_margin"
+                                                android:layout_marginRight="@dimen/def_margin"
+                                                android:layout_marginTop="@dimen/def_margin"
+                                                android:elevation="8dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -108,53 +109,53 @@
                         style="@style/CardViewHeaderText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/author" />
+                        android:text="@string/author"/>
 
                     <TextView
                         android:id="@+id/tv_author"
                         style="@style/CardViewContentText"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"/>
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0.40dp"
                         android:layout_marginBottom="6dp"
                         android:layout_marginTop="6dp"
-                        android:background="#50303030" />
+                        android:background="#50303030"/>
 
                     <TextView
                         android:id="@+id/tv_description_header"
                         style="@style/CardViewHeaderText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/description" />
+                        android:text="@string/description"/>
 
                     <TextView
                         android:id="@+id/tv_description"
                         style="@style/CardViewContentText"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"/>
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0.40dp"
                         android:layout_marginBottom="6dp"
                         android:layout_marginTop="6dp"
-                        android:background="#50303030" />
+                        android:background="#50303030"/>
 
                     <TextView
                         android:id="@+id/tv_genre_header"
                         style="@style/CardViewHeaderText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/genre" />
+                        android:text="@string/genre"/>
 
                     <TextView
                         android:id="@+id/tv_genre"
                         style="@style/CardViewContentText"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"/>
 
                 </LinearLayout>
 
@@ -187,7 +188,7 @@
                             style="@style/CardViewContentText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/added_by" />
+                            android:text="@string/added_by"/>
 
                         <TextView
                             android:id="@+id/tv_book_added_by"
@@ -210,7 +211,7 @@
                             style="@style/CardViewContentText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/owned_by" />
+                            android:text="@string/owned_by"/>
 
                         <TextView
                             android:id="@+id/tv_book_owned_by"
@@ -225,14 +226,14 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/cv_book_options"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/def_margin"
-                android:layout_marginLeft="@dimen/def_margin"
-                android:layout_marginRight="@dimen/def_margin"
-                android:layout_marginTop="@dimen/def_margin"
-                android:elevation="8dp">
+                                                android:id="@+id/cv_book_options"
+                                                android:layout_width="match_parent"
+                                                android:layout_height="wrap_content"
+                                                android:layout_marginBottom="@dimen/def_margin"
+                                                android:layout_marginLeft="@dimen/def_margin"
+                                                android:layout_marginRight="@dimen/def_margin"
+                                                android:layout_marginTop="@dimen/def_margin"
+                                                android:elevation="8dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -242,11 +243,11 @@
                     <Button
                         android:id="@+id/btn_edit_book"
                         style="@style/LoadPdfButtonStyle"
-                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_mode_edit_white_24dp"
-                        android:text="@string/btn_edit_desc_text" />
+                        android:text="@string/btn_edit_desc_text"
+                        android:visibility="gone"/>
 
                     <Button
                         android:id="@+id/btn_load_pdf"
@@ -254,7 +255,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_picture_as_pdf_white_24dp"
-                        android:text="@string/btn_load_pfd_text" />
+                        android:text="@string/btn_load_pfd_text"/>
 
                 </LinearLayout>
 
@@ -267,8 +268,8 @@
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_add_to_wishlist"
         style="@style/FabStyle"
+        android:visibility="gone"
         app:layout_anchor="@id/app_bar_layout"
-        app:layout_anchorGravity="bottom|right|end"
-        android:visibility="gone" />
+        app:layout_anchorGravity="bottom|right|end"/>
 
 </android.support.design.widget.CoordinatorLayout>
