--- a/app/src/main/res/layout/activity_book_panel.xml
+++ b/app/src/main/res/layout/activity_book_panel.xml
@@ -45,11 +45,11 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_add_book"
-            android:src="@drawable/ic_add_book"
             style="@style/FabStyle"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_margin="24dp"/>
+            android:layout_margin="24dp"
+            android:src="@drawable/ic_add_book"/>
 
     </RelativeLayout>
 
