--- a/app/src/main/res/layout/book_row.xml
+++ b/app/src/main/res/layout/book_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -31,21 +32,21 @@
                     android:id="@+id/iv_book_thumbnail"
                     android:layout_width="@dimen/book_thumbnail_width"
                     android:layout_height="@dimen/book_thumbnail_height"
-                    android:layout_marginStart="@dimen/def_margin"
                     android:layout_marginEnd="@dimen/def_margin"
+                    android:layout_marginStart="@dimen/def_margin"
                     android:layout_marginTop="@dimen/def_margin"
                     android:paddingBottom="@dimen/def_margin"
                     android:scaleType="fitXY"
-                    android:transitionName="@string/transition_book_cover" />
+                    android:transitionName="@string/transition_book_cover"/>
 
                 <ImageView
-                    android:layout_width="wrap_content"
                     android:id="@+id/gradient"
-                    android:transitionName="@string/transition_gradient"
-                    android:layout_alignRight="@+id/iv_book_thumbnail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
                     android:layout_alignBottom="@+id/iv_book_thumbnail"
-                    android:layout_alignLeft="@+id/iv_book_thumbnail"
-                    android:layout_height="20dp" />
+                    android:layout_alignStart="@+id/iv_book_thumbnail"
+                    android:layout_alignEnd="@+id/iv_book_thumbnail"
+                    android:transitionName="@string/transition_gradient"/>
 
                 <TextView
                     android:id="@+id/tv_book_title"
@@ -56,7 +57,7 @@
                     android:layout_marginEnd="@dimen/corner_margin"
                     android:layout_toEndOf="@+id/iv_book_thumbnail"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/tv_book_author"
@@ -66,7 +67,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_below="@+id/tv_book_title"
                     android:layout_marginEnd="@dimen/corner_margin"
-                    android:layout_toEndOf="@+id/iv_book_thumbnail" />
+                    android:layout_toEndOf="@+id/iv_book_thumbnail"/>
 
             </RelativeLayout>
 
