--- a/app/src/main/res/layout/fragment_added_books.xml
+++ b/app/src/main/res/layout/fragment_added_books.xml
@@ -9,14 +9,14 @@
         layout="@layout/base_book_list_layout"/>
 
     <TextView
+        android:id="@+id/tv_book_list_null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/added_books_null"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:id="@+id/tv_book_list_null"
+        android:fontFamily="sans-serif-black"
+        android:text="@string/added_books_null"
         android:textStyle="bold"
-        android:visibility="gone"
-        android:fontFamily="sans-serif-black"/>
+        android:visibility="gone"/>
 
 </RelativeLayout>
