--- a/app/src/main/res/layout/tab_icon_text.xml
+++ b/app/src/main/res/layout/tab_icon_text.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +11,7 @@
         android:id="@+id/custom_tab_icon"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
-        app:tint="@color/colorPrimary" />
+        app:tint="@color/colorPrimary"/>
 
     <TextView
         android:id="@+id/custom_tab_text"
@@ -20,6 +21,6 @@
         android:fontFamily="sans-serif"
         android:textColor="@android:color/white"
         android:textSize="14sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
 </LinearLayout>
